--- a/index.html
+++ b/index.html
@@ -105,8 +105,33 @@
                 </div>
             </div>
         </section>
-        <!-- check born - start -->
+        <!-- check born - end -->
+        <!-- guess-the-number - start -->
+        <section id="guess-the-number-section">
+            <div class="container">
+                <div class="guess-number-night">
+                    <div class="guess-the-number__line"></div>
+                <h1 class="guess-the-number__title">Вгадай число, яке загадав комп’ютер</h1>
+                <div class="guess-the-number__box">
+                    <div>
+                        <input type="text" class="guess-the-number__input" placeholder="Введіть число">
+                        <button type="button" class="guess-the-number__button">
+                            <svg class="guess-the-number__svg">
+                                <use href="./images/guess-the-number/guess-the-number-symbol-defs.svg#icon-dandruff"></use>
+                            </svg>
+                        </button>
+                    </div>
+                    <div>
+                        <p class="guess-the-number__text"></p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
     </div>
-    <script src="/scripts/check-the-born-year.js"></script>
+    <!-- guess-the-number - end -->
+    <script src="/scripts/first-page.js"></script>
+    <script src="/scripts/check-the-born-year.js"></script>\
+    <script src="/scripts/guess-the-number.js"></script>
 </body>
 </html>
