three new games added

--- a/index.html
+++ b/index.html
@@ -208,12 +208,67 @@
             </div>
             
             </section> 
-        <!-- calcutar -end -->    
+        <!-- calcutar -end -->  
+          <!-- calculator-of-time -start -->
+          <section id="time-calculator__section">
+            <div class="container">
+                <div class="time-calculator-night">
+                    <div class="time-calculator-line"></div>
+            <h1 class="time-calculator__title">Калькулятор часу</h1>
+            <div class="time-calculator__list">
+                <ul class="time-input__list">
+                    <input class="input-time__calculator" type="text submit" placeholder="Введіть число" id="start-timer">
+                    <button type="submit" class="time-button__calculator">
+                        <svg class="time-calculator__svg">
+                            <use href="./images/calculator-of-time/calculator-of-time.svg#icon-dandruff"></use>
+                        </svg>
+                    </button>
+                </ul>
+                    <img class="time-calc__stroke" src="./images/calculator-of-time/Vector-2.png" alt="vector">
+                    <p class="time-calc__time">час</p>
+            </div>
+                </div>
+            </div>
+        </section>
+          <!-- calculator-of-time -end -->
+          <!-- three-numbers -start -->
+          <section id="highest-number__section"></section>
+          <div class="container">
+              <div class="three-numbers-night">
+                  <div class="line__hn"></div>
+          <h1 class="highest-number__title">Введіть три числа</h1>
+          <ul class="input-num__list">
+              <input class="input-num__calculator" type="text" placeholder="Введіть число" id="one-input">
+              <input class="input-num__calculator" type="text" placeholder="Введіть число" id="two-input">
+              <input class="input-num__calculator" type="text" placeholder="Введіть число" id="three-input">
+          </ul>
+          <p class="highest-number__text" id="time-result">Найбільше число, яке ви ввели -</p>
+              </div>
+          </div>
+      </section>
+          <!-- three-numbers -end -->
+          <!-- pick-the-scientist -start -->
+          <section id="info__section">
+            <div class="container">
+                <div class="scientist-night">
+                    <div class="vector__scientist"></div>
+                <h2 class="info__title">
+                    Обери вченого/их
+                </h2>
+                <ul class="info__scientists"></ul>
+                <ul class="info__prompts"></ul>
+            </div>
+                </div>
+        </section>
+          <!-- pick-the-scientist -end -->
     </div>
     <script src="/scripts/first-page.js"></script>
     <script src="/scripts/check-the-born-year.js"></script>\
     <script src="/scripts/guess-the-number.js"></script>
     <script src="/scripts/paper-rock-sizors.js"></script>
     <script src="/scripts/calculator.js"></script>
+    <script src="/scripts/calculator-of-time.js"></script>
+    <script src="/scripts/three-numbers.js"></script>
+    <script src="/scripts/pick-the-scientist.js"></script>
 </body>
 </html>
